[package]
name = "ancs-linux"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ancs = "0.2.0"
anyhow = "1.0.83"
bluer = { version = "0.17.1", features = ["full"] }
byteorder-pack = "0.1.0"
clap = { version = "4.5.4", features = ["derive"] }
env_logger = "0.11.3"
futures = "0.3.30"
log = "0.4.21"
notify-rust = "4.11.0"
tokio = { version = "1.37.0", features = ["full"] }
